Navbar spacing issues fix

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -42,6 +42,6 @@
     --navbarnormal: rgba(72, 72, 72, 0.6);
     --sectionheadingcolor: rgba(255, 242, 123, 1);
     --bgcolorprogressbar: rgba(217, 217, 217, 1);
-    --topicheadingcolor: rgba(165, 255, 244, 1)
+    --topicheadingcolor: rgba(165, 255, 244, 1);
   }
 }
